# smiles-subword-vocabularies

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
configs/corpus/: coconut.yaml  cycpeptmpdb.yaml  pubchem.yaml  real_space.yaml  tmqm.yaml  zinc22.yaml  zinc22_tranches.tsv
configs/preprocess/: coconut_canon_dedup.yaml  coconut_holdout_split.yaml  cycpeptmpdb_canon_dedup.yaml  pubchem_canon_dedup.yaml  pubchem_extras_redraw_r1.yaml  pubchem_extras_redraw_r2.yaml  pubchem_extras_redraw_r3.yaml  pubchem_extras_size_15m.yaml  pubchem_extras_size_5m.yaml  pubchem_hash_subsample.yaml  pubchem_holdout_split.yaml  pubchem_size700k.yaml  real_space_canon_dedup.yaml  real_space_holdout_split.yaml  zinc22_canon_dedup.yaml  zinc22_extras_redraw_r1.yaml  zinc22_extras_redraw_r2.yaml  zinc22_extras_redraw_r3.yaml  zinc22_hash_subsample.yaml  zinc22_holdout_split.yaml  zinc22_size700k.yaml  zinc22_tranche_union.yaml
configs/tokenizer/: extras.yaml  grid.yaml
configs/tokenizer/probe/: pubchem_smirk_gpe_v1024_mb_size700k.yaml  pubchem_smirk_gpe_v1024_nmb_size700k.yaml  pubchem_smirk_unigram_v1024_mb_size700k.yaml  pubchem_smirk_unigram_v1024_nmb_size700k.yaml  zinc22_smirk_gpe_v1024_mb_size700k.yaml  zinc22_smirk_gpe_v1024_nmb_size700k.yaml  zinc22_smirk_unigram_v1024_mb_size700k.yaml  zinc22_smirk_unigram_v1024_nmb_size700k.yaml
data/: MANIFEST.yaml
demo/: README.md  analysis.py  app.py  build_web.py  export_cells.py  overlay.py  requirements.txt  segmenter.py  validate.py
demo/tokenizers/: manifest.json
demo/web/: README.md  index.html
paper/: SMIRK-FORK.md  arxiv.sty  paper.tex  refs.bib
results/data/: absorption_table.json  absorption_table.md  closure_table.json  closure_table.md  deadzone_table.json  deadzone_table.md  determinism_table.json  determinism_table.md  distribution_table.json  distribution_table.md  f95_table.json  f95_table.md  fertility_table.json  fertility_table.md  fg_alignment_table.json  fg_alignment_table.md  jaccard_table.json  jaccard_table.md  marginal_jaccard_table.json  marginal_jaccard_table.md  nestedness_table.json  nestedness_table.md  noncanon_table.json  noncanon_table.md  scaffold_table.json  scaffold_table.md  segmentation_table.json  segmentation_table.md
results/data/absorption/: coconut__v1024_mb.json  (+39 more)
results/tables/: _results_manifest.json  absorption_detail.tex  arm_exclusive.tex  base_glyphs.tex  closure_detail.tex  coconut_contrast.tex  composition.tex  corpora.tex  deadzone_nsweep.tex  delta_f.tex  distribution_detail.tex  fertility_detail.tex  fg_alignment_detail.tex  hyperparameters.tex  multiglyph_v256.tex  narrow_contrast.tex  nestedness_detail.tex  noncanon_detail.tex  ood_eval.tex  realized_vocab.tex  robustness_extras.tex  seven_measurements.tex  shared_core_growth.tex  three_jaccards.tex  transfer_matrix.tex
scripts/audit/: build_extras_audits.py  confirm_grid_cell_f95.py  verify_grid_cell_determinism.py
scripts/ingest/: ingest_coconut.py  ingest_cycpeptmpdb.py  ingest_pubchem.py  ingest_real_space.py  ingest_tmqm.py  ingest_zinc22.py
scripts/measure/: compute_absorption.py  compute_closure.py  compute_deadzone.py  compute_distribution.py  compute_fertility.py  compute_fg_alignment.py  compute_jaccard.py  compute_marginal_jaccard.py  compute_nestedness.py  compute_noncanon.py  compute_ood_eval.py  compute_scaffold.py  compute_segmentation.py  compute_sensitivity.py  compute_transfer.py
scripts/preprocess/: canon_dedup.py  consolidate_tranches.py  derive_tmqm_opensmiles.py  filter_conformance.py  hash_subsample.py  holdout_split.py
scripts/tokenize/: dispatch_extras_cell.py  dispatch_grid_cell.py  train_tokenizer.py
src/smiles_subword/: _hashing.py  _io.py  _shards.py  _sql.py  _time.py  config.py  manifest.py  paths.py
tests/: test_hashing.py  test_io.py  test_manifest.py  test_shards.py  test_sql.py  test_time.py
tests/data/: _pubchem_sample_1k.smi
tests/ingest/: conftest.py  test_coconut.py  test_common.py  test_corpus_config.py  test_cycpeptmpdb.py  test_pubchem.py  test_real_space.py  test_tmqm.py  test_zinc22.py  test_zinc22_config.py  test_zinc22_multi_tranche.py
tests/preprocess/: conftest.py  test_canon_dedup.py  test_canonicalize_minimal.py  test_conformance.py  test_dative.py  test_dedup_core.py  test_hash_subsample.py  test_holdout_split.py  test_io.py  test_tranche_union.py
tests/results/: conftest.py  test_extract.py
tests/tokenize/: test_base.py  test_build_tokenizer.py  test_corpus.py  test_dispatch.py  test_encode_batch.py  test_extras.py  test_grid.py  test_intrinsics.py  test_smirk_adapter.py  test_tokenizer_config.py
(+836 files in other folders)
